--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Lớp 12a4 học web</title>
-
     </head>
     <body>
         <h1>BAI TAP HOC HTML</h1>
         <h2>Hồ Tuyết Trinh</h2>
         <h3>bài tập F1</h3>
         <h3>Hinh3</h3>
+        <h3><a href="hinh3.html">hinh4</a></h3>
         <h3><a href="hinh4.html">hinh4</a></h3>
         <h3><a href="hinh5.html">hinh5</a></h3>
+        <h3><a href="hinh6.html">hinh4</a></h3>
         <h3>Hinh6</h3>
-        <h2>Bai tap F2</h2>
     </body>
 </html>
