--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
         <h2>Hồ Tuyết Trinh</h2>
         <h3>bài tập F1</h3>
         <h3>Hinh3</h3>
-        <h3><a href="hinh3.html">hinh4</a></h3>
+        <h3><a href="baitapF1/hinh3.html">hinh3</a></h3>
         <h3><a href="hinh4.html">hinh4</a></h3>
         <h3><a href="hinh5.html">hinh5</a></h3>
         <h3><a href="hinh6.html">hinh4</a></h3>
         <h3>Hinh6</h3>
+        <h3>bai tap F2</h3>
     </body>
 </html>
