--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3>Hinh3</h3>
         <h3><a href="baitapF1/hinh3.html">hinh3</a></h3>
         <h3><a href="baitapF1/hinh4.html">hinh4</a></h3>
-        <h3><a href="hinh5.html">hinh5</a></h3>
+        <h3><a href="baitapF1/hinh5.html">hinh5</a></h3>
         <h3><a href="hinh6.html">hinh4</a></h3>
         <h3>Hinh6</h3>
         <h3>bai tap F2</h3>
