--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <h3><a href="baitapF1/hinh5.html">hinh5</a></h3>
         <h3><a href="baitapF1/hinh6.html">hinh6</a></h3>
         <h3>bai tap F2</h3>
-        <h3><a href="</h3>
+        <h3><a href="baitapF2/hinh2.html">hinh2</a></h3>
+        <h3><a href="baitapF2/hinh4.html">hinh4</a></h3>
+        <h3><a href="baitapF2/hinh5.html">hinh5</a></h3>
+        <h3><a href="baitapF2/hinh6.html">hinh6</a></h3>
+        <h3><a href="baitapF2/hinh7.html">hinh7</a></h3>
+        <h3><a href="baitapF2/hinh8.html">hinh8</a></h3>
     </body>
 </html>
