--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
         <h4><a href="baitapF2/hinh7.html">hinh7</a></h4>
         <h4><a href="baitapF2/hinh8.html">hinh8</a></h4>
         <h5>bài tập F3</h5>
+        <h5><a href="baitapF3/hinh1.html">hinh1</a></h5>
+        <h5><a href="baitapF3/hinh2.html">hinh2</a></h5>
+        <h5><a href="baitapF3/hinh3.html">hinh3</a></h5>
+        <h5><a href="baitapF3/hinh4.html">hinh4</a></h5>
+        <h5><a href="baitapF3/hinh5.html">hinh5</a></h5>
     </body>
 </html>
