--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h3><a href="baitapF1/hinh4.html">hinh4</a></h3>
         <h3><a href="baitapF1/hinh5.html">hinh5</a></h3>
         <h3><a href="baitapF1/hinh6.html">hinh6</a></h3>
+        <h3><a href="baitapF1/hinh7.html">hinh7</a></h3>
         <h4>bài tập F2</h4>
         <h4><a href="baitapF2/hinh2.html">hinh2</a></h4>
         <h4><a href="baitapF2/hinh4.html">hinh4</a></h4>
