--- a/baitapF3/hinh3.html
+++ b/baitapF3/hinh3.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Những trang web thường ghé thăm</h1>
 <ul>
-    <li>Chân trời sáng tạo</li>
+    <li>Bao thanh nien</li>
     <iframe src="https://thanhnien.vn/" width="80%" height="500">
     </iframe>
 </ul>
