--- a/baitapF3/nhiemvu2/loptruong.html
+++ b/baitapF3/nhiemvu2/loptruong.html
@@ -5,4 +5,12 @@
     <title>Lớp trưởng</title>
 </head>
 <body>
-  
+  <h1>GIỚI THIỆU CHUNG</h1>
+    <hr>
+    <p>Ho ten:Nguyen Minh Chau</p>
+    <p>Nơi sinh: Thành phố Hồ Chí Minh</p>
+    <h1> Sở thích</h1>
+    <hr>
+
+</body>
+</html>
