--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h4><a href="baitapF2/hinh6.html">hinh6</a></h4>
         <h4><a href="baitapF2/hinh7.html">hinh7</a></h4>
         <h4><a href="baitapF2/hinh8.html">hinh8</a></h4>
+        <h4><a href="baitapF2/hinh9.html">hinh9</a></h4>
         <h5>bài tập F3</h5>
         <h5><a href="baitapF3/hinh1.html">hinh1</a></h5>
         <h5><a href="baitapF3/hinh2.html">hinh2</a></h5>
