--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <h5><a href="baitapF3/hinh2.html">hinh2</a></h5>
         <h5><a href="baitapF3/hinh3.html">hinh3</a></h5>
         <h5><a href="baitapF3/hinh4.html">hinh4</a></h5>
-        <h5><a href="baitapF3/hinh5.html">hinh5</a></h5>
+        <h5><a href="baitapF3/nhiemvu2/kiyeu.html">nhiemvu2</a></h5>
     </body>
 </html>
