--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
         <h5><a href="baitapF3/hinh3.html">hinh3</a></h5>
         <h5><a href="baitapF3/hinh4.html">hinh4</a></h5>
         <h5><a href="baitapF3/nhiemvu2/kiyeu.html">nhiemvu2</a></h5>
+        <h5><a href="baitapF3/hinh4.html">hinh4</a></h5>
     </body>
 </html>
