--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <h5><a href="baitapF3/hinh3.html">hinh3</a></h5>
         <h5><a href="baitapF3/hinh4.html">hinh4</a></h5>
         <h5><a href="baitapF3/nhiemvu2/kiyeu.html">nhiemvu2</a></h5>
-        <h5><a href="baitapF3/hinh4.html">hinh4</a></h5>
+        <h5><a href="baitapF3/hinh6.html">hinh6</a></h5>
+        <h6>bài tập F4</h6>
+        <h6><a href="baitapF4/hinh1.html">hinh1</h6>
     </body>
 </html>
