--- a/baitapF3/nhiemvu2/loppho.html
+++ b/baitapF3/nhiemvu2/loppho.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <titile>Lop hoc</titile>
+    <titile>Lớp 12A4</titile>
   </head>
   <body>
     <h1>GIỚI THIỆU CHUNG</h1>
