--- a/baitapF3/nhiemvu2/loptruong.html
+++ b/baitapF3/nhiemvu2/loptruong.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Lớp trưởng</title>
+    <title>Lớp 12A4</title>
 </head>
 <body>
   <h1>GIỚI THIỆU CHUNG</h1>
