--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h5><a href="baitapF3/nhiemvu2/kiyeu.html">nhiemvu2</a></h5>
         <h5><a href="baitapF3/hinh6.html">hinh6</a></h5>
         <h6>bài tập F4</h6>
-        <h6><a href="baitapF4/hinh1.html">hinh1</h6>
+        <h6><a href="baitapF4/hinh1.html">hinh1</a></h6>
+        <h6><a href="baitapF4/nhiemvu1.html">nhiemvu1</a></h6>
     </body>
 </html>
